fix: news section description overriding with other content issue resolved. show full length text on about us card in home page

--- a/src/components/NewsTicker/styles.module.css
+++ b/src/components/NewsTicker/styles.module.css
@@ -103,6 +103,11 @@
   .introduction {
     padding: 0 1rem;
     font-size: smaller;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
   }
 
   .arrow_container {
