--- a/docs-kits/kits/data-trust-and-security-kit/resources/styles.module.css
+++ b/docs-kits/kits/data-trust-and-security-kit/resources/styles.module.css
@@ -1,8 +1,8 @@
 /*
 #################################################################################
-# Tractus-X - EcoPass KIT
+# Eclipse Tractus-X - Data Trust and Security KIT
 #
-# Copyright (c) 2022, 2024 Contributors to the Eclipse Foundation
+# Copyright (c) 2025 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
 # information regarding copyright ownership.
