fix: community product page is now supported with light and dark theme

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -375,3 +375,8 @@
     width: 40%;
   }
 }
+
+.MuiAccordionSummary-root,
+.MuiAccordionDetails-root {
+     background-color: var(--ifm-background-color) !important;
+}
