feat: added new kit gallery

--- a/src/components/2.0/KitsArchitecture/styles.module.scss
+++ b/src/components/2.0/KitsArchitecture/styles.module.scss
@@ -1,14 +1,4 @@
-/*******************************************************************  &::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90px;
-    height: 104px;
-    background-color: #ffffff;
-    clip-path: polygon(40% 0%, 60% 0%, 100% 15%, 100% 85%, 60% 100%, 40% 100%, 0% 85%, 0% 15%);
-  }**
+/*******************************************************************
  * Eclipse Tractus-X - eclipse-tractusx.github.io
  *
  * Copyright (c) 2025 Contributors to the Eclipse Foundation
