feat: added clear copyright note

--- a/src/components/2.0/KitsArchitecture/styles.module.scss
+++ b/src/components/2.0/KitsArchitecture/styles.module.scss
@@ -637,7 +637,7 @@
     height: 58px;
   }
   
-  .hexagon_catena .hexagon_content svg {
+  .hexagon_catena .hexagon_content img {
     width: 40px !important;
     height: 40px !important;
   }
@@ -723,7 +723,7 @@
     height: 52px;
   }
   
-  .hexagon_catena .hexagon_content svg {
+  .hexagon_catena .hexagon_content img {
     width: 36px !important;
     height: 36px !important;
   }
@@ -804,7 +804,7 @@
     height: 45px;
   }
   
-  .hexagon_catena .hexagon_content svg {
+  .hexagon_catena .hexagon_content img {
     width: 32px !important;
     height: 32px !important;
   }
@@ -909,7 +909,7 @@
     height: 48px;
   }
   
-  .hexagon_catena .hexagon_content svg {
+  .hexagon_catena .hexagon_content img {
     width: 34px !important;
     height: 34px !important;
   }
@@ -1015,7 +1015,7 @@
     height: 42px;
   }
   
-  .hexagon_catena .hexagon_content svg {
+  .hexagon_catena .hexagon_content img {
     width: 30px !important;
     height: 30px !important;
   }
